[package]
name = "blinky"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", git = "https://github.com/jneem/esp-hal", branch = "adc-in-mv" }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32c3"] }
embedded-hal = "0.2.7"

[profile.dev]
opt-level = 2
