[package]
name = "esp32c3-examples"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.11.0", features=["async", "embassy", "embassy-time-systick"] }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
embedded-hal-async = "0.2.0-alpha.2"
static_cell = "1.2.0"
embassy-executor = { version = "0.3.0", features = ["arch-riscv32", "executor-thread", "nightly"] }
embassy-time = { version = "0.1.2", features = ["generic-queue-8"] }

[profile.dev]
opt-level = 2
