[package]
name = "esp32c3-examples"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.12.0" }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32c3"] }

[profile.dev]
opt-level = 2
