[package]
name = "rtt-defmt"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.13.0" }
defmt-rtt = "0.4.0"
defmt = "0.3.5"
critical-section = "1.1.2"

[profile.dev]
opt-level = 2
