[package]
name = "sleep-and-blink"
version = "0.1.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.12.0" }
esp-println = { version = "0.6.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "print-uart", "panic-handler"] }

[profile.dev]
opt-level = 2

[patch.crates-io]
esp32c3-hal = { git = "https://github.com/jneem/esp-hal", branch = "sleep" }
esp-hal-common = { git = "https://github.com/jneem/esp-hal", branch = "sleep" }
